Fix section sign visibility

--- a/src/it-the-drote/public/stylesheets/style.css
+++ b/src/it-the-drote/public/stylesheets/style.css
@@ -37,6 +37,11 @@ img {
     visibility: hidden;
 }
 
-.section:hover {
+h1:hover + a.section,
+h2:hover + a.section,
+h3:hover + a.section,
+h4:hover + a.section,
+h5:hover + a.section,
+h6:hover + a.section, {
     visibility: visible;
 }
